# prokbert

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  dependences_tmp.txt  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  tests.yml
data/: ESKAPE_sample.fasta
data/preprocessed/: pretraining_k6s1.h5  pretraining_k6s2.h5  pretraininge.h5
data/sample_data/: ESKAPE_sample.fasta
docs/: conf.py  config_utils.rst  datacollator.rst  dev_pretraining_eval_lib.rst  dnadatacollator.rst  dnadatasets.rst  dnatokenizer.rst  evalutils.rst  general_utils.rst  index.rst  preproclib.rst  prok_datasets.rst  prokbert_tokenizer.rst  requirements.txt  sequtils.rst  training_utils.rst
docs/api/: prokbert.dev_pretraining_eval_lib.get_all_masked_vectors.rst  prokbert.dev_pretraining_eval_lib.get_kmers_for_seq_positions.rst  prokbert.dev_pretraining_eval_lib.get_mask_predictions.rst  prokbert.dev_pretraining_eval_lib.get_metric_for_masking_position.rst  prokbert.dev_pretraining_eval_lib.get_prediction_results_for_segment.rst  prokbert.dev_pretraining_eval_lib.get_pretraining_evaluation_batch_size_megatron_bert_eval_load_model.rst  prokbert.dev_pretraining_eval_lib.get_shift_counts.rst  prokbert.dev_pretraining_eval_lib.pretty_print_overlapping_sequence.rst  prokbert.dnadatasets.DnaDatasetID.rst  prokbert.dnadatasets.ProkDataset.rst  prokbert.sequtils.load_contigs.rst  (+5 more)
envs/: Dockerfile  prokbert.def
examples/: Contrastive_learning_example.ipynb  Contrastive_learning_example2.ipynb  Curriculum_UMAP_Demo.ipynb  Curriculum_loss_finetuning.ipynb  Embedding_visualization.ipynb  Finetuning.ipynb  Inference.ipynb  ProkBERT_Training_Helper.ipynb  Segmentation.ipynb  Tokenization.ipynb  curriculum_finetuning_1_5.py  curriculum_finetuning_example.ipynb  curriculum_finetuning_example.py  finetuning.py  finetuning_5fold.py  finetuning_from_ncbi.py  finetuning_groups.py  generate_familiy_references.py  genome_network.ipynb  prokbert_pretrain.py  prokbert_seqpreprocess.py  run_gtdb_fintuning.sbatch  save_and_uploadmodel.py  test_binary_classification.py  test_curriculum_class.py  test_curriculum_class_noteboko.py  test_embeddings_models.py  test_fintuning_curr.py  test_fintuning_gtdb.py  test_hf_automodel.py  test_reference_embeddings.py  test_single_mask_mlm_dev.py  test_transformers5.py
scripts/: mfu.py  process.py  process.sh  process_embeddings.py  process_embeddings.sh  split_dataset.py
tests/: test_configutils.py  test_prok_datasets.py  test_prokbert_model.py
(+84 files in other folders)
