[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "prokbert"
version = "0.0.8"
authors = [
  { name="nbrg-ppcu", email="nbrg@itk.ppke.hu" },
]
description = "ProkBERT"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "biopython>=1.79",
  "pandas>=1.4.4",
  "intervaltree>=0.0.1",
  "umap-learn>=0.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nbrg-ppcu/prokbert"
"Bug Tracker" = "https://github.com/nbrg-ppcu/prokbert/issues"
